build/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # Docs: https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations

    # Maximum request body size
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    # Timeout for communicating with service (in seconds)
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # Rate limiting
    # limit-rpm = limit each IP address to X requests per minute
    # limit-whitelist = do not rate limit clients in the IP range
    nginx.ingress.kubernetes.io/limit-rpm: "120"
  name: ranger-api-ingress
  namespace: staging
  labels:
    app: ranger-api
spec:
  rules:
    - host: staging-ranger-api.rfcx.org
      http:
        paths:
          - backend:
              serviceName: ranger-api-service
              servicePort: 80
    - host: staging-guardian-api.rfcx.org
      http:
        paths:
          - backend:
              serviceName: ranger-api-service
              servicePort: 80
